base.core/src/main/java/eapli/base/grammar/LabeledExpr.g4
grammar LabeledExpr;

prog: info+ ;

info:    ID  TITLE  WELCOME_MESSAGE* LIST_OF_SECTIONS section+;

section:  SECTION_ID SECTION_TITLE SECTION_DESCRIPTION*  OBLIGATORINESS CONTENT question+;

question: QUESTION_ID Q OBLIGATORINESS questionType+ ;

questionType :     free_text
                 | multipleChoice
                 | singleChoice
                 | numeric;

free_text: FREE_TEXT EXTRA_INFO SENTENCE+;
multipleChoice: MULTIPLE_CHOICE EXTRA_INFO CHOOSE+;
singleChoice: SINGLE_CHOICE EXTRA_INFO CHOOSE+;
numeric: NUMERIC EXTRA_INFO CHOOSE+;

ALPHANUMERIC: [a-zA-Z0-9]+;
SENTENCE: [.,!?' a-zA-Z0-9]+ | [.,!?a-zA-Z0-9]+;
NUMBER: [0-9]+;
STRING: [0-9A-Za-z]+;
OBLIGATORINESS_ENUM: 'MANDATORY' | 'OPTIONAL' | 'CONDITION DEPENDENT';
CHOOSE: [0-9]+('. ')STRING(' ')+;

FREE_TEXT: 'TYPE: FREE-TEXT';
MULTIPLE_CHOICE: 'TYPE: MULTIPLE-CHOICE';
SINGLE_CHOICE: 'TYPE: SINGLE-CHOICE';
NUMERIC: 'TYPE: NUMERIC';

ID: 'ID: ' ALPHANUMERIC;
TITLE: 'TITLE: ' SENTENCE;
WELCOME_MESSAGE: 'WELCOME MESSAGE: ' SENTENCE;
LIST_OF_SECTIONS: 'LIST OF SECTIONS:';
CONTENT: 'CONTENT:';
SECTION_ID: 'SECTION ID: ' NUMBER;
SECTION_TITLE: 'SECTION TITLE: ' SENTENCE;
SECTION_DESCRIPTION: 'SECTION DESCRIPTION: ' SENTENCE;
OBLIGATORINESS: 'OBLIGATORINESS: ' OBLIGATORINESS_ENUM;
QUESTION_ID: 'QUESTION ID: ' NUMBER;
Q: 'Q: ' SENTENCE;
EXTRA_INFO: 'EXTRA INFO: ';

WS : [\t\r\n]+ -> skip;
